chore: migrate to Poetry, restructure package, and fix config bug (0.1.1)
- Switched project dependency management from pip/requirements.txt to Poetry
- Updated pyproject.toml and added proper package declarations
- Restructured project into a src/ layout with package code under src/<package_name>
- Fixed import/module resolution issues caused by old layout
- Removed unused  argument from TrainConfig (Option B)
- Cleaned up related code in main.py and training pipeline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,37 @@
-[project]
+[tool.poetry]
 name = "Avinor_Predictions"
-version = "0.1.0"
-description = "Developing a model that shows the probability of simultaneous active dialogue for flights based on Avinor's data from their data competition."
+version = "0.1.1"
+description = "Developing a model that shows the probability of simultaneous active dialogue for flights based on Avinor's data competition."
 readme = "README.md"
-requires-python = ">=3.11"
-dependencies = [
-    "pandas",
-    "matplotlib",
-    "seaborn",
-    "numpy",
-    "requests",
-    "scikit-learn",
-    "xgboost",
-    "python-dotenv"
 
+authors = [
+    "Milad Tootoonchi <milad.tootoonchi@nmbu.no>",
+    "Sania Minaipour <Sania.Minaipour@nmbu.no>"
 ]
+
+packages = [
+    { include = "flight_concurrency_predictor", from = "src" }
+]
+
+[tool.poetry.dependencies]
+python = ">=3.11"
+pandas = "*"
+matplotlib = "*"
+seaborn = "*"
+numpy = "*"
+requests = "*"
+scikit-learn = "*"
+xgboost = "*"
+python-dotenv = "*"
+
+[tool.poetry.group.dev.dependencies]
+black = "*"
+ruff = "*"
+pytest = "*"
+python-dotenv = "*"
+mypy = "*"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
+
